fix lateral  sidebar on mobile

--- a/src/style/menu_cards.css
+++ b/src/style/menu_cards.css
@@ -156,7 +156,6 @@ tr {
 @media (max-width: 768px) {
   .cards {
     top: 3.9rem;
-    margin-left: 2%;
     width: 92%;
   }
 
