--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -9,7 +9,6 @@
   z-index: 900;
   overflow-y: auto;
   scrollbar-width: thin;
-  padding-left: 0.4rem;
 }
 
 .sidebar {
